[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/Interface.gd" type="Script" id=1]
[ext_resource path="res://ui/timelabel.gd" type="Script" id=2]
[ext_resource path="res://ui/hp.gd" type="Script" id=3]
[ext_resource path="res://ui/hplabel.gd" type="Script" id=4]
[ext_resource path="res://resources/horizontalbar.png" type="Texture" id=5]
[ext_resource path="res://resources/horizontalbarprogress.png" type="Texture" id=6]
[ext_resource path="res://ui/currentbar.gd" type="Script" id=7]

[node name="Main" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Interface" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="timer" type="VBoxContainer" parent="CanvasLayer/Interface"]
margin_left = -0.0192871
margin_top = 365.41
margin_right = 254.981
margin_bottom = 458.41

[node name="timelabel" type="Label" parent="CanvasLayer/Interface/timer"]
margin_right = 255.0
margin_bottom = 14.0
text = "filler"
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="CanvasLayer/Interface/timer/timelabel"]
autostart = true

[node name="hp" type="VBoxContainer" parent="CanvasLayer/Interface"]
margin_top = 478.0
margin_right = 407.0
margin_bottom = 593.0
script = ExtResource( 3 )

[node name="hplabel" type="Label" parent="CanvasLayer/Interface/hp"]
margin_right = 407.0
margin_bottom = 14.0
script = ExtResource( 4 )

[node name="currentbar" type="TextureProgress" parent="CanvasLayer/Interface/hp"]
margin_top = 18.0
margin_right = 407.0
margin_bottom = 56.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
script = ExtResource( 7 )

[connection signal="hp_max" from="CanvasLayer/Interface" to="CanvasLayer/Interface/hp" method="_on_Interface_hp_max"]
[connection signal="hp_updated" from="CanvasLayer/Interface" to="CanvasLayer/Interface/hp" method="_on_Interface_hp_updated"]
[connection signal="set_time_m" from="CanvasLayer/Interface" to="CanvasLayer/Interface/timer/timelabel" method="_on_Interface_set_time_m"]
[connection signal="set_time_s" from="CanvasLayer/Interface" to="CanvasLayer/Interface/timer/timelabel" method="_on_Interface_set_time_s"]
[connection signal="timeout" from="CanvasLayer/Interface/timer/timelabel/Timer" to="CanvasLayer/Interface/timer/timelabel" method="_on_Timer_timeout"]
[connection signal="current_changed" from="CanvasLayer/Interface/hp" to="CanvasLayer/Interface/hp/currentbar" method="_on_hp_current_changed"]
[connection signal="current_changed" from="CanvasLayer/Interface/hp" to="CanvasLayer/Interface/hp/hplabel" method="_on_hp_current_changed"]
[connection signal="maximum_changed" from="CanvasLayer/Interface/hp" to="CanvasLayer/Interface/hp/currentbar" method="_on_hp_maximum_changed"]
[connection signal="maximum_changed" from="CanvasLayer/Interface/hp" to="CanvasLayer/Interface/hp/hplabel" method="_on_hp_maximum_changed"]
